--- a/src/componentes/NavBar/Header/header.css
+++ b/src/componentes/NavBar/Header/header.css
@@ -8,6 +8,8 @@
     background-color: #E94545;
     top: 0;
     box-shadow: 0px 3px 5px 0.42;
+    margin-top: 0;
+    margin-bottom: 1rem;
   }
   
 .link{
