--- a/src/sass/components/_itemList.scss
+++ b/src/sass/components/_itemList.scss
@@ -1,3 +1,4 @@
+/* item count*/
 .itemcountContainer {
     padding: 12px 25px;
     display: flex;
@@ -10,11 +11,21 @@
 }
 
 .itemcountControl {
-    display: flex;
+
     justify-content: space-evenly;
     padding: 2px 10px;
 }
 
 .itemcountBtn {
     margin-top: 15px;
+}
+
+/* item list */
+
+.barra-divisora {
+    color: #D2D2D2;
+}
+
+.row {
+    --bs-gutter-x: 0% !important;
 }
