--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,3 +1,4 @@
+/* header */
 .nav-menu{
     display: flex;
     justify-content: space-around;
@@ -5,7 +6,7 @@
     width: 100%;
     margin: 0;  
     height: 90px;
-    background-color: #E94545;
+    background-color: $c-nav-footer;
     top: 0;
     box-shadow: 0px 3px 5px 0.42;
     margin-top: 0;
@@ -18,3 +19,10 @@
     font-size: 1.3em;
     color:#131313;
   }
+
+ /* carrito de compras */ 
+
+.iconoCarrito {
+  height: 60px;
+  width: 60px;
+}
