--- a/src/sass/abstracts/_variable.scss
+++ b/src/sass/abstracts/_variable.scss
@@ -6,10 +6,10 @@
     font-family: "Outfit", sans-serif;
 }
 
-$c-principal: #f9e076;
-$c-secundario: #001f3f;
-$c-letras: #85144b;
-$c-fondo: #fde992;
-$c-nav-footer: #c4ebf1;
+$c-principal: #E57373;      // Naranja
+$c-secundario: #27AE60;    // Verde
+$c-letras: #333333;        // Gris oscuro
+$c-fondo: #F4F4F4;         // Gris claro
+$c-nav-footer: #BB8FCE; 
 $negro: #090909 ;
 $blanco: #f9f9f9 ;
