--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -26,3 +26,11 @@
   height: 60px;
   width: 60px;
 }
+
+.offRoute {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
