--- a/src/sass/base/_resets.scss
+++ b/src/sass/base/_resets.scss
@@ -6,10 +6,13 @@
 
 li {
     list-style: none;
+}a {
+    text-decoration: none !important; 
 }
-a {
-    text-decoration: none;
+a:hover {
+    text-decoration: underline ; 
 }
+
 button {
     border: none;
     background: none;
